Closed Bug 1526971 Opened 7 years ago Closed 7 years ago

Can't drag messages from folder/inbox to Windows desktop in TB 66 beta

Categories

(Core :: DOM: Serializers, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- unaffected
firefox66 --- fixed
firefox67 --- fixed

People

(Reporter: jorgk-bmo, Assigned: jorgk-bmo)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

As the summary says:

Can't drag messages from folder/inbox to Windows desktop in TB 66 beta.

Still working in TB 65 beta, so that gives us an idea of the regression range since TB 66 started on 2018-12-10 (https://wiki.mozilla.org/Release_Management/Calendar). TB 67 started on 2019-01-28, so it must be somewhere in between.

Alice, can you please find the regression for us.

Flags: needinfo?(alice0775)

Walter, did you find this in beta testing?

(In reply to Jorg K (GMT+1) from comment #1)

Walter, did you find this in beta testing?

Works with TB 65.0b4 on Windows 10.
Doesn't work with TB 66.0b1 on Windows 10.
Works with TB 66.0b1 on Linux Mint 19.

Dragging and dropping messages to the desktop isn't a normal part of the test procedure, or my work flow.

Thanks, Alice, I'll look into it.

Walter, this should 100% be part of the test suite. Many users, including myself, export messages by dragging them onto an OS folder.

Blocks: 571074
Component: Mail Window Front End → Serializers
Product: Thunderbird → Core

Looks like the error checking is unwanted here.

Assignee: nobody → jorgk
Status: NEW → ASSIGNED
Attachment #9043162 - Flags: review?(mats)
Attachment #9043162 - Flags: review?(evilpies)
Comment on attachment 9043162 [details] [diff] [review] 1526971-GetDownloadDetails.patch Seems reasonable to me, since we'll take the else-branch and try using 'sourceURI' instead.
Attachment #9043162 - Flags: review?(mats) → review+

First go at doing something in Phab. Looks like on can just upload a patch, as per:
00:55:50 - BenB: rjl, Phab -> Code Reviews -> (top right) Create diff
00:55:54 - BenB: https://phabricator.services.mozilla.com/differential/diff/create/

Thanks, Mats. Could you stick it onto the Phab version as well, so I can land it myself?

Attachment #9043162 - Flags: review?(evilpies)
Attachment #9043165 - Attachment is obsolete: true
Keywords: checkin-needed

Pushed by opoprus@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/bf40d50fa8af
Revert over-zealous error checking in nsDataObj::GetDownloadDetails() from bug 571074. r=mats

Keywords: checkin-needed
Priority: -- → P2
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

Comment on attachment 9043162 [details] [diff] [review]
1526971-GetDownloadDetails.patch

Beta/Release Uplift Approval Request

Feature/Bug causing the regression

Bug 571074

User impact if declined

Not sure for Firefox, but for Thunderbird, users can't export messages via drag&drop on Windows any more.

Is this code covered by automated tests?

No

Has the fix been verified in Nightly?

Yes

Needs manual test from QE?

No

If yes, steps to reproduce

List of other uplifts needed

None

Risk to taking this patch

Low

Why is the change risky/not risky? (and alternatives if risky)

Not risky. It only reverts one hunk of bug 571074 to the original state, hence a "mini backout".

String changes made/needed

None.

Attachment #9043162 - Flags: approval-mozilla-beta?
Comment on attachment 9043162 [details] [diff] [review] 1526971-GetDownloadDetails.patch Partial backout, should help Thunderbird. Doesn't seem risky for Firefox since it is reverting to previous behavior. OK for uplift for beta 10.
Attachment #9043162 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: