Bug 1526971 - Revert over-zealous error checking in nsDataObj::GetDownloadDetails() from bug 571074. r=mats a=lizzard